app/kubernetes/base/jukebox/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jukebox
  labels:
    istio-injection: enabled
