app/kubernetes/base/jukebox/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jukebox
  namespace: jukebox
spec:
  selector:
    matchLabels:
      app: jukebox
  template:
    metadata:
      labels:
        app: jukebox
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: jukebox
        image: jacobmammoliti/jukebox:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
