app/kubernetes/base/jukebox/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jukebox
  namespace: jukebox
spec:
  selector:
    app: jukebox
  ports:
  - port: 8080
    targetPort: 8080
