app/kubernetes/base/jukebox/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jukebox
  namespace: jukebox
  labels:
    name: jukebox
spec:
  ingressClassName: nginx
  rules:
  - host: jukebox.cloud.coldbrewlabs.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jukebox
            port: 
              number: 8080
