app/kubernetes/base/jukebox/4-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jukebox
  namespace: jukebox
spec:
  hosts:
  - jukebox.coldbrewlabs.ca
  gateways:
  - istio-system/application-gateway
  http:
    route:
    - destination:
        port:
          number: 8080
        host: jukebox
